@@ -1,5 +1,5 @@
 #if !defined(lint) && !defined(__INSIGHT__)
-static const char libbk__rcsid[] = "$Id: b_run.c,v 1.66 2004/04/19 22:04:16 jtt Exp $";
+static const char libbk__rcsid[] = "$Id: b_run.c,v 1.67 2004/06/07 17:01:57 jtt Exp $";
 static const char libbk__copyright[] = "Copyright (c) 2003";
 static const char libbk__contact[] = "<projectbaka@baka.org>";
 #endif /* not lint */
@@ -599,7 +599,7 @@ int bk_run_signal(bk_s B, struct bk_run *run, int signum, void (*handler)(bk_s B
     BK_RETURN(B,-1);
   }
 
-  if (!handler || (void *)handler == (void *)SIG_IGN || (void *)handler == (void *)SIG_DFL)
+  if (!handler || (ptr2uint_t)handler == (ptr2uint_t)SIG_IGN || (ptr2uint_t)handler == (ptr2uint_t)SIG_DFL)
   {							// Disabling signal
     act.sa_handler = (void *)handler;
     sigemptyset(&act.sa_mask);
