@@ -1,3 +1,14 @@
+2004-06-07  James Tanis  <jtt@buscemi.sysdetect.com>
+
+	* lib/b_run.c (bk_run_signal): Shut up Insure.
+
+	* lib/b_realloc.c (bk_malloc_wrap_destroy): DOH! Use while() not
+	for() when destroying clc's.
+
+	* lib/b_general.c (bk_general_init): Initialize malloc wrapper if
+	__INSURE__ 
+	(bk_general_destroy): Destroy malloc wrapper if __INSURE__ 
+
 2004-05-28  James Tanis  <jtt@buscemi.sysdetect.com>
 
 	* lib/b_string.c (bk_string_csv_quote): Escape NEWLINES with the
